legacy/errors/error9.txt
adam@dig:~/openhip-openhip-7ca0bd5421a5$ make
make  all-recursive
make[1]: Entering directory '/home/adam/openhip-openhip-7ca0bd5421a5'
Making all in src
make[2]: Entering directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
make[3]: Entering directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
gcc -DHAVE_CONFIG_H -I. -I.. -I./include -I/usr/include/libxml2    -g -O2 -O3 -Werror -D_GNU_SOURCE -fno-strict-aliasing -Wall -DCONFIG_HIP -DSYSCONFDIR="\"/usr/local/etc/hip\"" -DLOCALSTATEDIR="\"/var\"" -MT hip-hip_dht.o -MD -MP -MF .deps/hip-hip_dht.Tpo -c -o hip-hip_dht.o `test -f 'protocol/hip_dht.c' || echo './'`protocol/hip_dht.c
mv -f .deps/hip-hip_dht.Tpo .deps/hip-hip_dht.Po
gcc -DHAVE_CONFIG_H -I. -I.. -I./include -I/usr/include/libxml2    -g -O2 -O3 -Werror -D_GNU_SOURCE -fno-strict-aliasing -Wall -DCONFIG_HIP -DSYSCONFDIR="\"/usr/local/etc/hip\"" -DLOCALSTATEDIR="\"/var\"" -MT hip-hip_globals.o -MD -MP -MF .deps/hip-hip_globals.Tpo -c -o hip-hip_globals.o `test -f 'protocol/hip_globals.c' || echo './'`protocol/hip_globals.c
mv -f .deps/hip-hip_globals.Tpo .deps/hip-hip_globals.Po
gcc -DHAVE_CONFIG_H -I. -I.. -I./include -I/usr/include/libxml2    -g -O2 -O3 -Werror -D_GNU_SOURCE -fno-strict-aliasing -Wall -DCONFIG_HIP -DSYSCONFDIR="\"/usr/local/etc/hip\"" -DLOCALSTATEDIR="\"/var\"" -MT hip-hip_input.o -MD -MP -MF .deps/hip-hip_input.Tpo -c -o hip-hip_input.o `test -f 'protocol/hip_input.c' || echo './'`protocol/hip_input.c
protocol/hip_input.c: In function ‘validate_signature’:
protocol/hip_input.c:3788:11: error: storage size of ‘dsa_sig’ isn’t known
   DSA_SIG dsa_sig;
           ^~~~~~~
protocol/hip_input.c:3789:13: error: storage size of ‘ecdsa_sig’ isn’t known
   ECDSA_SIG ecdsa_sig;
             ^~~~~~~~~
protocol/hip_input.c:3789:13: error: unused variable ‘ecdsa_sig’ [-Werror=unused-variable]
protocol/hip_input.c:3788:11: error: unused variable ‘dsa_sig’ [-Werror=unused-variable]
   DSA_SIG dsa_sig;
           ^~~~~~~
protocol/hip_input.c: In function ‘handle_dh’:
protocol/hip_input.c:4224:51: error: dereferencing pointer to incomplete type ‘EVP_PKEY {aka struct evp_pkey_st}’
     log_(NORM, "EVP_PKEY type: %d", hip_a->peer_dh->type);
                                                   ^~
cc1: all warnings being treated as errors
Makefile:851: recipe for target 'hip-hip_input.o' failed
make[3]: *** [hip-hip_input.o] Error 1
make[3]: Leaving directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
Makefile:1151: recipe for target 'all-recursive' failed
make[2]: *** [all-recursive] Error 1
make[2]: Leaving directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
Makefile:422: recipe for target 'all-recursive' failed
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory '/home/adam/openhip-openhip-7ca0bd5421a5'
Makefile:357: recipe for target 'all' failed
make: *** [all] Error 2
